option java_package = "com.nextev.cvs_proto.protobuf.custom";
option java_outer_classname = "CanMsgUnit";

message CanMsg {
    repeated CanData can_data = 1;
    repeated CanNews can_news = 2;

    message CanData {
        optional int32 msg_id = 1;
        optional bytes value = 2;
    }

    message CanNews {
        optional int32 msg_id = 1;
        repeated bytes value = 2;
    }
}